--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "universal-cookie": "^7.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
