--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,3 +5,11 @@
     }
   }
 }
+
+// "axios": "^1.6.2",
+// "next": "14.0.3",
+// "nextjs-toploader": "^1.6.4",
+// "react": "^18",
+// "react-dom": "^18",
+// "styled-components": "^4.2.0",
+// "universal-cookie": "^7.0.1"
